<resources>
    <string name="app_name">First Aid Guidance</string>
    <string name="Emergency">Emergency</string>
    <string name="VideoInstruction">Video</string>
    <string name="EmergencyCall">Emergency Call</string>
    <string name="NearbyHospital">Nearby Hospital</string>
    <string name="FirstAidTip">First Aid Tip</string>
    <string name="share_location">Share Location</string>
    <string name="asthma">Asthma</string>
    <string name="bleeding">Bleeding</string>
    <string name="burning">Burning</string>
    <string name="chest">Chest Pain</string>
    <string name="chock1">ChokingAdult</string>
    <string name="chock2">ChokingBaby</string>
    <string name="cuts">Cuts and bruises</string>
    <string name="diarr">Diarrhoea</string>
    <string name="dog">Dog bite</string>
    <string name="drowning">Drowning</string>
    <string name="epilepsy">Epilepsy</string>
    <string name="faint">Faint</string>
    <string name="fever">Fever</string>
    <string name="fractures">Fractures</string>
    <string name="nobreathing">No breathing</string>
    <string name="nosebleeding">Nose bleeding</string>
    <string name="poisoning">Poisoning</string>
    <string name="stings">Stings(bees,wasp)</string>
    <string name="stroke">Stroke</string>
    <string name="select">Select Language</string>
    <string name="sure">Are you sure you want to Exit?"</string>
    <string name="communicate">Communicate</string>
    <string name="feedback">Feedback</string>
    <string name="contact_developers">Contact Developers</string>
    <string name="share_app">Share App</string>
    <string name="setting">Setting</string>
    <string name="language">language</string>
    <string name="system">System</string>
    <string name="login">login</string>
    <string name="exit">Exit</string>
    <string name="first_aid">First Aid</string>
    <string name="by_undisputed_coder">By Undisputed Coder</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="write">Write Your FeedBack</string>
    <string name="writ">Write Your Message</string>
    <string name="writes">Write your preferred developer email here</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="lina">Lina Mikail</string>
    <string name="linEmail">linamikail9416@gmail.com</string>
    <string name="belay">Belay Zelek</string>
    <string name="belayEmail">belayzeleke.bz@gmail.com</string>
    <string name="miki">Mikiyas Melaku</string>
    <string name="mikiEmail">mikiyasmelaku1998@yahoo.com</string>
    <string name="arif">Arif Jemal</string>
    <string name="arifEmail">Fahmijemal629@yahoo.com</string>
    <string name="rose">Tsigereda Daniel</string>
    <string name="roseEmail">rosedanel46@gmail.com</string>
    <string name="ask">Contact your preferred developer below</string>
    <string name="check">check</string>
    <string-array name="Emergency_Names">
        <item>@string/asthma</item>
        <item>@string/bleeding</item>
        <item>@string/burning</item>
        <item>@string/chest</item>
        <item>@string/chock1</item>
        <item>@string/chock2</item>
        <item>@string/cuts</item>
        <item>@string/diarr</item>
        <item>@string/dog</item>
        <item>@string/drowning</item>
        <item>@string/epilepsy</item>
        <item>@string/faint</item>
        <item>@string/fever</item>
        <item>@string/fractures</item>
        <item>@string/nobreathing</item>
        <item>@string/nosebleeding</item>
        <item>@string/poisoning</item>
        <item>@string/stings</item>
        <item>@string/stroke</item>
    </string-array>
    <string name="watch">Tap the video to watch the steps</string>
    <string name="asthmsS1">1.	Stay calm and reassure the patient</string>
    <string name="asthmsS2">2. Let the person take the position he finds most comfortable</string>
    <string name="asthmsS3">3.	If the person takes inhaler puffs support him taking his puffs</string>
    <string name="asthmsS4">4.	Ensure fresh air by opening the window</string>
    <string name="asthmsS5">5.	Assist loosening any tight clothing</string>
    <string name="asthmsS6">6.	If the person loss consciousness makes sure the air way stays open</string>
    <string name="asthmsS7">7.	Stay with the person and continue to observe him</string>
    <string name="asthmsS8">8.	Always refer the person to health care centre for future follow up</string>
    <string name="asthmsS9">9.	Always wash your hand after giving care</string>
    <string name="bleedingS1">1, Make sure the area is safe</string>
    <string name="bleedingS2">2, Shout or call for help</string>
    <string name="bleedingS3">3, Use glove or cover with your hands with a plastic bag</string>
    <string name="bleedingS4">4, Ask the person to sit or lay down on the floor</string>
    <string name="bleedingS5">5, Stop bleeding by pressing with both hands on the wound</string>
    <string name="bleedingS6">6, If the bleeding has stopped,cover with a clean cotton cloth</string>
    <string name="bleedingS7">7, Wrap a bandage around the wound</string>
    <string name="bleedingS8">8, Always wash your hand after giving care </string>
    <string name="burnS1">1. Make sure the area is safe </string>
    <string name="burnS2">2. Call for help</string>
    <string name="burnS3">3. If the person cloths are on fire stop the fire</string>
    <string name="burnS4">4. Douse the fire</string>
    <string name="burnS5">5. Wrap a blanket</string>
    <string name="burnS6">6. Ask the victim to roll over</string>
    <string name="burnS7">7. Cool the burn with running water for minimum 10 – 15 minutes</string>
    <string name="burnS8">8. Do not tear a blister and do not apply any ointment</string>
    <string name="burnS9">9. Cover the wound with a clean cotton cloth</string>
    <string name="burnS10">10. Keep the victim warm</string>
    <string name="burnS11">11. Transport the victim to the nearest healthcare centre</string>
    <string name="burnS12">12. Always wash your hand after giving care</string>
    <string name="chestS1">1. Make sure the area is safe</string>
    <string name="chestS2">2. Shout or call help</string>
    <string name="chestS3">3. Ask the person to rest and not move</string>
    <string name="chestS4">4. Ask the person to sit down in a comfortable position at a safe location nearby</string>
    <string name="chestS5">5. Reassure the person and tell him what is happening</string>
    <string name="chestS6">6. Ask the person if he takes medication for his heart condition. If also allow him to take the prescribed medication</string>
    <string name="chestS7">7. If there is aspirin available ask if he has any known bleeding disorder or any condition that contradict the usage of aspirin, if none ask the person to chew on an aspirin tablet and swallow it as it will help the blood flow to the heart.</string>
    <string name="chestS8">8. Arrange the transport to the nearest healthcare facility</string>
    <string name="chestS9">8. Arrange the transport to the nearest healthcare facility</string>
    <string name="choke1S1">1. Ask the person ‘’are you choking’’</string>
    <string name="choke1S2">2. If the person answers the question do not do anything else but stay with him and encourage to cough</string>
    <string name="choke1S3">3. If the person can not speak cough or breath go and stand behind the person</string>
    <string name="choke1S4">4. Support the person chest with one hand</string>
    <string name="choke1S5">5. Bend the person forward</string>
    <string name="choke1S6">6. Give five firms blows between the persons shoulder blades with the help of your hand</string>
    <string name="choke1S7">7. If the object did not come out stand behind the person</string>
    <string name="choke1S8">8. Put both arms around the person so your hands meet in front. Make a first place your fist between the person navels and lower tip of his breastbone</string>
    <string name="dogS1">1. Make sure the area is safe</string>
    <string name="dogS2">2.	Ensure the dog can’t bite you</string>
    <string name="dogS3">3.	Wash your hand is it possible</string>
    <string name="dogS4">4.	Try to avoid in coming contact with the person’s blood. Use glove if available or you can use clean plastic bag to cover your hand</string>
    <string name="dogS5">5.	Flush the bite wound immediately with clean water for 10 – 15 minutes. Wash the wound with water with detergent if available.</string>
    <string name="dogS6">6.	In case of bleeding stop the bleeding by putting direct pressure</string>
    <string name="dogS7">7.	Cover the wound with clean cotton cloth</string>
    <string name="dogS8">8.	Always refer the person healthcare centre for further treatment</string>
    <string name="dogS9">9.	Always wash your hands after giving care</string>
    <string name="phone_number">Phone Number</string>
    <string name="see">If you want to see Your Current Location ?</string>
    <string name="required">Required</string>
    <string name="myth_fact">Myth and Facts Regarding to First Aid</string>
    <string name="tipS1">Myth: Put your head back when you have a nosebleed.</string>
    <string name="tipS2">Fact: Don’t put your head back! Blood could flow down your throat and potentially into your stomach.</string>
    <string name="tipS3">Myth: Help soothe and heal a burn by applying butter</string>
    <string name="tipS4">Fact: Butter could make the burn worse and make treatment by a doctor more difficult</string>
    <string name="tipS5">Myth: Apply a hot compress to a sprained ankle.</string>
    <string name="tipS6">Fact: Cold is the best way to combat swelling. Heat could actually worsen the inflammation of the injury</string>
    <string name="tipS7">Myth: Force Someone to Vomit Up Poison</string>
    <string name="tipS8">Fact: many poisons are worse for the body coming up than going down.</string>
    <string name="golden_rule">The golden rules of First Aid</string>
    <string name="recipes">10 Recipes for Success at Effective and Safe First Aid:</string>
    <string name="tipSR1">1. Use a systematic approach in all medical emergencies.</string>
    <string name="tipR2">2.	Identify and avoid risks to yourself, the person affected and third parties.</string>
    <string name="tipR3">3.	Request support early (first aiders, AED, emergency number 144).</string>
    <string name="tipR4">4.	Be “suspicious” and primarily assume it is something serious.</string>
    <string name="tipR5">5.	Deal quickly with any chaos and cope with the situation.</string>
    <string name="tipR6">6.	Position the patient so that they feel comfortable (except in the event of a suspected spinal injury).</string>
    <string name="tipR7">7.	Only let one person talk to the patient.</string>
    <string name="tipR8">8.	Get professional support much quicker in case of emergencies with children.</string>
    <string name="tipR9">9.	Ensure there is leadership: one person must always take the lead.</string>
    <string name="tipR10">10. Only transport patients by ambulance or taxi.</string>
    <string name="principle_of_aid">Principles of First Aid</string>
    <string name="principle_of_aid1">1. Preserve Life.</string>
    <string name="principle_of_aid2">2. Prevent Deterioration.</string>
    <string name="principle_of_aid3">3. Promote Recovery.</string>
    <string name="principle_of_aid4">4. Taking immediate action.</string>
    <string name="principle_of_aid5">5. Calming down the situation.</string>
    <string name="principle_of_aid6">6. Calling for medical assistance.</string>
    <string name="three_cs">The Three Cs of Emergency </string>
    <string name="three_cs1">1. Check</string>
    <string name="three_cs2">2. Call</string>
    <string name="three_cs3">3. Care</string>
</resources>