<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipsActivity"
    android:orientation="vertical"
    android:background="@drawable/bg">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImg"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/ic_read_cross"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/selectedUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/FirstAidTip"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>


 <ScrollView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:scrollbars="vertical">



     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="25sp"
             android:text="@string/myth_fact"

             />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         style="@style/tipText"
         android:text="@string/tipS1"
         />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         style="@style/tipText"
         android:text="@string/tipS2"
         />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipS3"
             />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipS4"
             />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipS5"
             />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipS6"
             />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipS7"
             />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipS8"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="25sp"
             android:text="@string/golden_rule"

             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textStyle="bold|italic"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:text="@string/recipes"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipSR1"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipR2"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipR3"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipR4"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipR5"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipR6"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipR7"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipR8"
             />

         <TextView
             style="@style/tipText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/tipR9" />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/tipR10"
             />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/principle_of_aid1"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/principle_of_aid2"
             />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/principle_of_aid"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/principle_of_aid3"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/principle_of_aid4"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/principle_of_aid5"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/principle_of_aid6"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="25sp"
             android:text="@string/three_cs"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textStyle="bold|italic"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:text="@string/three_cs1"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/three_cs1.1"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textStyle="bold|italic"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:text="@string/three_cs2"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/three_cs2.1"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textStyle="bold|italic"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:text="@string/three_cs3"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/tipText"
             android:text="@string/three_cs3.1"
             />








     </LinearLayout>

    </ScrollView>
</LinearLayout>